[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://baddieAI.gd" type="Script" id=3]

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Viewport")

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 31, 30.4985 )

[node name="Node2D" type="Node2D"]

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
texture = SubResource( 6 )

[node name="Enemy" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )
movespeed = 200.0
distancekeep = 100.0
distancekeep2 = 200.0
acceleration = 0.1
friction = 0.1
attack_type = 1
health = 8
timer_cooldown = 2.0

[node name="RayCast2D" type="RayCast2D" parent="Enemy"]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="Sprite" type="Sprite" parent="Enemy"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2( 0.0151214, -0.501547 )
rotation = -0.00151237
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="Enemy"]

[node name="Timer2" type="Timer" parent="Enemy"]

[connection signal="timeout" from="Enemy/Timer" to="Enemy" method="_on_Timer_timeout"]
[connection signal="timeout" from="Enemy/Timer2" to="Enemy" method="_on_Timer2_timeout"]
